manifest/bank-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bank-service
  name: bank-service
  namespace: banka-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-service
  template:
    metadata:
      labels:
        app: bank-service
    spec:
      containers:
      - image: harbor.k8s.elab.rs/banka-3/bank-service:latest
        imagePullPolicy: Always
        name: bank-service
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: bank-service
  name: bank-service
  namespace: banka-3
spec:
  ports:
  - port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app: bank-service
  type: ClusterIP
