manifest/email-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: email-service
  name: email-service
  namespace: banka-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-service
  template:
    metadata:
      labels:
        app: email-service
    spec:
      containers:
      - image: harbor.k8s.elab.rs/banka-3/email-service:latest
        imagePullPolicy: Always
        name: email-service
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: email-service
  name: email-service
  namespace: banka-3
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: email-service
  type: ClusterIP
