manifest/stock-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stock-service
  name: stock-service
  namespace: banka-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-service
  template:
    metadata:
      labels:
        app: stock-service
    spec:
      containers:
      - image: harbor.k8s.elab.rs/banka-3/stock-service:latest
        imagePullPolicy: Always
        name: stock-service
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: stock-service
  name: stock-service
  namespace: banka-3
spec:
  ports:
  - port: 8083
    protocol: TCP
    targetPort: 8083
  selector:
    app: stock-service
  type: ClusterIP
